<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trascope.final_ya_mwisho_lam.Search">
    <item android:id="@+id/action_create" android:title="create" android:icon="@drawable/add_content_item2"
        android:orderInCategory="80" app:showAsAction="always" />
    <item android:id="@+id/action_search" android:title="Search" android:icon="@drawable/search_content_item"
        android:orderInCategory="90" app:showAsAction="always" />
    <item android:id="@+id/action_friends" android:title="Friends" android:icon="@drawable/group_content_users"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_account" android:title="Account" android:icon="@drawable/account_content_user"
        android:orderInCategory="110" app:showAsAction="always" />
    <item android:id="@+id/action_open_tour" android:title="@string/action_open_tour"
        android:orderInCategory="120" app:showAsAction="never" />
    <item android:id="@+id/action_location" android:title="@string/action_location"
        android:orderInCategory="130" app:showAsAction="never" />
    <item android:id="@+id/action_favorites" android:title="@string/action_favorites"
        android:orderInCategory="140" app:showAsAction="never" />
    <item android:id="@+id/action_invite_friends" android:title="@string/action_invite_friends"
        android:orderInCategory="150" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="160" app:showAsAction="never" />
    <item android:id="@+id/action_signout" android:title="@string/action_signout"
        android:orderInCategory="170" app:showAsAction="never" />
</menu>
